[Blog] Added redirect from plugin, deleted about page in favour of index, added line on contact section, fixed overflow on contact photo

--- a/jantar-theme/_sass/jantar-theme.scss
+++ b/jantar-theme/_sass/jantar-theme.scss
@@ -29,6 +29,7 @@ table {
     margin: 0px auto;
     text-align: center;
     padding: 15px 0px;
+    overflow: hidden;
     img {
         max-width: 600px;
         height:auto;
